[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/scenes/Menus/Pause.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Baloo2-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/textures/play_btn_blue.png" type="Texture" id=3]
[ext_resource path="res://assets/textures/restart_btn_green.png" type="Texture" id=4]
[ext_resource path="res://assets/textures/home_btn_green.png" type="Texture" id=5]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.745098 )
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="DynamicFont" id=2]
size = 72
font_data = ExtResource( 2 )

[node name="Pause" type="Control"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -410.0
margin_top = -270.0
margin_right = 410.0
margin_bottom = 270.0
mouse_filter = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="Control" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 40.0
margin_right = -40.0
margin_bottom = -40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Background/Container"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -106.5
margin_right = 106.5
margin_bottom = 114.0
custom_fonts/font = SubResource( 2 )
text = "PAUSE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Background/Container"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -144.0
custom_constants/separation = 40
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Home" type="TextureButton" parent="Background/Container/HBoxContainer"]
margin_left = 114.0
margin_right = 258.0
margin_bottom = 144.0
texture_normal = ExtResource( 5 )

[node name="Resume" type="TextureButton" parent="Background/Container/HBoxContainer"]
margin_left = 298.0
margin_right = 442.0
margin_bottom = 144.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart" type="TextureButton" parent="Background/Container/HBoxContainer"]
margin_left = 482.0
margin_right = 626.0
margin_bottom = 144.0
texture_normal = ExtResource( 4 )

[connection signal="pressed" from="Background/Container/HBoxContainer/Home" to="." method="_on_Home_pressed"]
[connection signal="pressed" from="Background/Container/HBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="Background/Container/HBoxContainer/Restart" to="." method="_on_Restart_pressed"]
